fix(m4,m5,SH): bug bashing and design alignment - AIVS 702,707,706,704,701,675,680,619 (#167)
* fix: stream health notification

* fix: composer notif z-index

* fix: rendition setting z-index

* refactor: player

* refactor: player 2

* refactor: header

* refactor: floating player

* refactor: notification

* refactor: tooltip

* refactor: profile menu

* refactor: sidebar, app layout

* refactor: modal

* refactor: user avatar, icon, tab list

* refactor: header 2 - useClickAway

* refactor: mobile navbar

* refactor: mobile panel

* refactor: notifications 2 - stream manager actions

* refactor: chat

* refactor: viewer actions - celebration, quiz, product

* refactor: stream manager actions

* refactor: stream manager actions 2

* refactor: stream events and learn more

* fix: session navigator button padding

* fix: header and inline notification z-index swap

* fix: default celebration duration

* fix: player regressions

* fix: floating nav height

* fix: notification keys

* fix: avis-701

* Merge branch 'fix/sh/aivs-653' of github.com:mboulin/amazon-ivs-ugc-web-demo into fix/sh/aivs-653

* merge main

* fix: aivs-702

* fix: aivs-707 mobile padding

* fix: aivs-706

* fix: aivs-675 design update hover state lightmode

* fix: aivs - 619 - font weight

* fix: url img not showing up aivs-680

* fix: aivs-704

* fix: updated buy more light mode

* fix: updated section padding

* fix: changed font, removed extra classes

* removed extra margin

* fix: update lm colors

* fix: updated product button colors

* fix: update colors

--- a/web-ui/src/pages/StreamHealth/StreamSession/Metrics/StreamEvents/LearnMoreMessage/LearnMoreMessage.css
+++ b/web-ui/src/pages/StreamHealth/StreamSession/Metrics/StreamEvents/LearnMoreMessage/LearnMoreMessage.css
@@ -44,6 +44,7 @@
   list-style-position: outside;
   padding: 0 15px;
   margin-left: 9px;
+  list-style: disc;
 }
 
 .learn-more-message ul li:not(:last-child) {
